FEB 24 2021
	Reset XP counter button added to sidepane


FEB 23 2021 (again)
    Graphics can now be enabled or disabled via the bot sidepane!
	Hits, prayer, fatigue now displayed on Uranium
	Fixed isAuthentic() returning true on Uranium for some reason.

	Hitsplat interrupts have been added -- scripts will now be able to detect when a hitsplat occurs by overriding
	    npcDamagedInterrupt(int, int) or playerDamagedInterrupt(int, int).
    "::command" interrupts have been added -- scripts will now be able to detect and parse these commands by overriding
        chatCommandInterrupt(String).

	::show command added -- this unhides the bot sidepane if you've hidden it.
	::hidepaint -- hides any paint from scripts etc
	::showpaint -- shows any paint from scripts etc if previously hidden



FEB 23 2021
	XP counter now works on Uranium
	Improved Uranium banking performance
	GnomeFlaxx0r -- picks flax, optionally strings, in Gnome Stronghold
	TaverlyBuyer script added -- buys vials and newts
	VialFiller script added -- fills vials in Falador
	Monkz -- basic script that kills monks in the lower level of the monastery. supports bone burying and prayer, with recharging at altar. 
	Updated Searos' SpinStrings to work on Uranium
	Updated PowerFletcha to use better tree id for normal trees
	Searos' ArrowMaker now supports headless arrows
	
FEB 20 2021
	AIOSmelter no longer tries to use "perfect gold bar" instead of "gold bar" for crafting jewelry
	AIOMagic now has quicker wait times, leading to increased casts per hr. 
	Controller.openBank() will now immediately return within ~10ms of the bank opening, leading to MUCH faster banking times for scripts that use it.


FEB 19 2021
	AIOSmelter now supports silver, gold, and gem furnace crafting items
	AIOSmelter now supports command line arguments
	Updated README.md to include OpenRSC Discord and IdleRSC donation link 
	Added castSpellOnSelf to IdleRSC and SBot
	Added AlchWheat for high/low alchemy training