@@ -1,5 +1,6 @@
 FEB 24 2021
 	Reset XP counter button added to sidepane
+	::bothelp command added
 
 
 FEB 23 2021 (again)
